# 1-wl-coloring-gpu

./: .gitignore  .gitmodules  README.md  bench.db  bench.py  bench_large.py  benchlarge.db  benchlarge.py  build.sh  download.sh  install.sh  sigref-adapter  tbe  tbe.py  vcon
LAW/: vcon
cpu_be/: CMakeLists.txt  be  be.cpp  be_time.cpp
cuda_be/: CMakeLists.txt  cuda_be.cu  cuda_be_multi.cu  cuda_be_time.cu
law/: download.sh  vcon
law/webgraph-rs/cli/src/to/: arcscuda.rs  arcsvalmari.rs  gdata.rs  mod.rs
newbench/: bench.db.1  bench.py  vcon
src/batched_be/: CMakeLists.txt  batched_be_aggressive.cu
src/part_ref/: MDP_minimize.cc
src/random_be/: CMakeLists.txt  random_be.cpp
src/v_src/: MDPmin.cc  MDPmin.out  reader.cc  valmari  valmari_mask
v_src/: MDP_minimize.cc  MDP_read.cc  MDP_write.cc  MDPmin.cc  err.cc  graph.txt  readme.txt  valmari  valmari_g_con.py  vgraph1.txt  writer.cc
webgraph-rs/cli/src/to/: mod.rs
